--- a/css/style.css
+++ b/css/style.css
@@ -1041,17 +1041,18 @@ ul.trend-nav>li {
 }
 
 .trend-nav-item>ul>li>ul>li {
-  background: #FCEDFF;
+ /* background: #FCEDFF;
   border: 3px solid #FCEDFF;
   padding: 25px;
   border-radius: 10px;
   margin-bottom: 13px;
   min-width: 31%;
   text-align: center;
+  margin-right: 16px;*/
   margin-right: 16px;
 }
 
-.trend-nav-item>ul>li>ul>li:hover {
+.trend-nav-item>ul>li>ul>li > a:hover {
   background: #F8F8F8;
   border: 3px solid #AE00D4;
   transition: 0.5s ease;
@@ -1062,6 +1063,15 @@ ul.trend-nav>li {
 }
 
 .trend-nav-item>ul>li>ul>li a {
+ /* text-decoration: none;
+  color: #292929;
+  font-family: "Nunito-Bold";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  padding: 25px 20px;*/
   text-decoration: none;
   color: #292929;
   font-family: "Nunito-Bold";
@@ -1070,7 +1080,19 @@ ul.trend-nav>li {
   font-size: 18px;
   line-height: 25px;
   text-align: center;
-  padding: 25px 20px;
+  /* padding: 25px 20px; */
+  width: 100%;
+  /* height: 100%; */
+  background: #FCEDFF;
+  border: 3px solid #FCEDFF;
+  padding: 20px 40px;
+  border-radius: 10px;
+  margin-bottom: 13px;
+  /* min-width: 37%; */
+  text-align: center;
+  display: inline-block;
+
+
 }
 
 .trend-nav-item>ul>li>h4 {
