--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
+  height: 100%;
 }
 
 
@@ -158,7 +159,7 @@ body {
   line-height: 1;
   font-family: OpenSans, sans-serif;
   color: #24201E;
-  height: 100%;
+ 
 }
 
 div,
@@ -273,9 +274,24 @@ h3 {
   margin-bottom: 35px;
 }
 
-
+h4 {
+  color: #24201E;
+    font-family: "Nunito-Bold";
+    font-style: normal;
+    font-weight: 700;
+    line-height: 32px;
+    font-size: 28px;
+    padding: 25px 0px;
+}
 /*блоки*/
-.wrapper{}
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.main{
+  flex-grow: 1;
+}
 .container {
   margin: 0 auto;
   max-width: 1200px;
